--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mobx": "^6.13.1",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
